syntax = "proto3";
package proto;

message LargeNumber {
	int32 IntNumber = 1;
	int64 LongNumber = 2;
	string StringNumber = 3;
}